--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/vite": "^4.1.7",
     "gsap": "^3.13.0",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
+    "react-i18next": "^15.6.0",
+    "react-icons": "^5.5.0",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.7",
     "three": "^0.129.0",
